updated text to main.html

--- a/frame_1.html
+++ b/frame_1.html
@@ -26,7 +26,7 @@
 			<li>Learn Python 3 The Hard Way</li>
 			<img src="hard_way.jpg" alt="hard way">
 			<li>The C programming Language (K&R)</li>
-			<li id = "blue">Sam's Teach Yourself C in one hour a day</li>
+			<li>Sam's Teach Yourself C in one hour a day</li>
 			<img src="teach_c.jpg" alt="Teach Yourself c">
 		</ul>
 	</div>
@@ -56,7 +56,6 @@
 	<div class = "portfolio" id = "seventh">
 		<nav>
 			<h1>Developer Portfolio</h1>
-			<p>This is my developer portfolio<p>
 			<ol>
 				<li>Python Address Book with SQLIte3 Database <a href="http://github.com/jamie082/address_py">here</a></li>
 				<li>Countdown counter (Tkinter/Python) <a href="http://github.com/jamie082/timer_project">here</a></li>
@@ -64,7 +63,7 @@
 				<li>Leap Year <a href="http://github.com/jamie082/leap_year_py">here</a></li>
 				<li>Weight Program (py)<a href="http://github.com/jamie082/weight_py">Weight Progam (py)</a></li>
 				<li>Wordpress Blog <a href="http://jamiemorrissey.tech">here</a></li>
-				<li>Scrape my site project <a href="http://github.com/jamie082/scrape_my_site"></a>click here</li>
+				<li>Scrape my site project <a href="http://github.com/jamie082/scrape_my_site">click here</a></li>
 			</ol>
 		</nav>
 	</div>
